# ------------------------------------------------------------------------------
# | Kawala : A high kawalty crafter for Koalas that take pride in their work.  |
# |                                                                 - 1 love   |
# ------------------------------------------------------------------------------
# ------------------------------------------------------------------------------
[package]                                                                     #|
name         = "kawala"
version      = "0.1.2"
authors      = ["Maka <makagucci@gmx.com>"]
edition      = "2021"
license      = "MIT"

repository   = "https://github.com/0xmaka/kawala"
description  = "A tool to view, manipulate and craft calldata."
keywords     = ["blockchain", "rust-lang", "evm", "blockchain-tool", "calldata"]

[lib]
name         = "kawala"
path         = "src/lib.rs"

[dependencies]
[features]
simd = []
                                                                             ##|
# ------------------------------------------------------------------------------
